--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-6">
-                                <img src="images/drone-entrega.jpg" width="435" height="270" alt="drone-entrega">
+                                <img src="images/drone-entrega.jpg" width="100%" alt="drone-entrega">
                                 <p>Oferecemos o serviço de <span class="text-primary">Taxi-Drone</span>
                                     para todos os bairros da cidade metropolitana de San Salads. Serviço
                                     seguro e aceita todos os tipos de objetos.
                                 </p>
                             </div>
                             <div class="col-sm-6">
-                                <img src="images/drone-pet.jpg" width="435" height="270" alt="drone-pet">
+                                <img src="images/drone-pet.jpg" width="100%" alt="drone-pet">
                                 <p>Serviço de <span class="text-primary">Pet-Drone</span> está sendo oferecido dentro de todas as normas
                                     regularizadas pelo UXE902I. É necessário que o pet esteja dentro de uma
                                     caixa ou bolsa de transporte ou não tenha medo de altura.
                                 </p>
                             </div>
                             <div class="col-sm-6">
-                                <img src="images/drone-espiao.jpg" width="435" height="270" alt="drone-espião">
+                                <img src="images/drone-espiao.jpg" width="100%" alt="drone-espião">
                                 <p>O <span class="text-primary">Spy-Drone</span> é um serviço de espionagem disponível somente durante a noite.
                                     Seu voo é autorizado apenas em bairros específicos. Para mais detalhes
                                     sobre o seu uso, ligue para a central.
                                 </p>
                             </div>
                             <div class="col-sm-6">
-                                <img src="images/drone-agricultura.jpg" width="435" height="270" alt="drone-agricultura">
+                                <img src="images/drone-agricultura.jpg" width="100%" alt="drone-agricultura">
                                 <p>Drones especializados em irrigação também estão disponíveis,
                                     assim como os de detecção de falhas e entre outras atividades ligadas a
                                     agricultura. Conheça o nosso <span class="text-primary">Agri-Drone</span>.
